--- a/public/css/style.css
+++ b/public/css/style.css
@@ -176,3 +176,10 @@ a.article:hover {
         display: none;
     }
 }
+
+.copyright {
+    position: absolute;
+    bottom: 0;
+    right: 0; 
+    background-color: #e6e6e6;
+}
