--- a/public/css/style.css
+++ b/public/css/style.css
@@ -100,13 +100,13 @@ a[data-toggle="collapse"] {
     position: relative;
 }
 
-.dropdown-toggle::after {
+/* .dropdown-toggle::after {
     display: block;
     position: absolute;
     top: 50%;
     right: 20px;
     transform: translateY(-50%);
-}
+} */
 
 ul ul a {
     font-size: 0.9em !important;
@@ -175,6 +175,166 @@ a.article:hover {
     #sidebarCollapse span {
         display: none;
     }
+}
+
+.hero-background {
+    height:100vh;
+    min-height:400px;
+    background-size:cover;
+    background-image:linear-gradient(rgba(29, 30, 114, 0.4), rgba(4, 3, 102, 0.4)),url('../img/hero.jpg');
+}
+
+.search-border {
+    border-radius: 50px;
+}
+
+.search-btn-border {
+    border-radius: 50px;
+}
+
+.nav-bg {
+    background-color: rgba(22, 22, 36, 0.7) !important;
+}
+
+.custom-toggler.navbar-toggler {
+    border-color: rgb(255, 255, 255);
+}
+.custom-toggler .navbar-toggler-icon {
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255,255,255, 0.7)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
+}
+
+@media only screen and (min-width: 992px) {
+    .nav-custom-margin-right {
+        margin-right: 10rem;
+    } 
+
+    .nav-custom-margin-top {
+        margin-top: 100px;
+    } 
+}
+    
+.who-we-are {
+    height: 100vh;
+}
+
+.analyze {
+    height: 70vh;
+}
+
+.header {
+    position: relative;
+    text-align: center;
+    background: linear-gradient(
+      60deg,
+      rgba(84, 58, 183, 1) 0%,
+      rgba(0, 172, 193, 1) 100%
+    );
+    color: white;
+  }
+  .logo {
+    width: 50px;
+    fill: white;
+    padding-right: 15px;
+    display: inline-block;
+    vertical-align: middle;
+  }
+  .inner-header {
+    height: 50vh;
+    width: 100vw;
+    margin: 0;
+    padding: 0;
+  }
+  /* .flex {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+  } */
+  .waves {
+    position: relative;
+    width: 100%;
+    height: 100vh;
+    margin-bottom: -7px;
+    /*Fix for safari gap*/
+    min-height: 100px;
+    max-height: 150px;
+  }
+  .content {
+    position: relative;
+    height: 20vh;
+    text-align: center;
+    background-color: white;
+  }
+  /* Animation */
+  .parallax > use {
+    animation: move-forever 25s cubic-bezier(0.55, 0.5, 0.45, 0.5) infinite;
+  }
+  .parallax > use:nth-child(1) {
+    animation-delay: -2s;
+    animation-duration: 7s;
+  }
+  .parallax > use:nth-child(2) {
+    animation-delay: -3s;
+    animation-duration: 10s;
+  }
+  .parallax > use:nth-child(3) {
+    animation-delay: -4s;
+    animation-duration: 13s;
+  }
+  .parallax > use:nth-child(4) {
+    animation-delay: -5s;
+    animation-duration: 20s;
+  }
+  @keyframes move-forever {
+    0% {
+      transform: translate3d(-90px, 0, 0);
+    }
+    100% {
+      transform: translate3d(85px, 0, 0);
+    }
+  }
+  /*Shrinking for mobile*/
+  @media (max-width: 768px) {
+    .waves {
+      height: 40px;
+      min-height: 40px;
+    }
+    .content {
+      height: 30vh;
+    }
+    h1 {
+      font-size: 24px;
+    }
+    .inner-header {
+        height: 80vh;
+        width: 100vw;
+        margin: 0;
+        padding: 0;
+    }
+  }  
+
+  @media (max-width: 768px) {
+    .survey-margin-top {
+        margin-top: 150px !important;
+    }
+  } 
+
+.call-to-action {
+    height: 30vh;
+}
+
+.cta-margin-top {
+    padding-top: 55px;
+}
+
+.footer-main {
+    background-color: #101c53;
+    color: white;
+}
+
+.financial-statement {
+    margin-top: 150px;
+    height: 100%;
 }
 
 .copyright {
