Fix index and edit header of subscription plan

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -320,6 +320,12 @@ a.article:hover {
     }
   } 
 
+  @media (min-width: 768px) {
+    .sub-plan-check-top {
+        margin-top: 40px;
+    }
+  }
+
 .call-to-action {
     height: 30vh;
 }
