--- a/public/css/style.css
+++ b/public/css/style.css
@@ -350,3 +350,8 @@ a.article:hover {
     right: 0; 
     background-color: #e6e6e6;
 }
+
+.sidebar-active {
+    color: #2c3d88;
+    background: #fff;
+}
