Change design of login related pages

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -355,3 +355,9 @@ a.article:hover {
     color: #2c3d88;
     background: #fff;
 }
+
+
+.top-margin {
+    margin-top: 150px;
+    height: 100%;
+}
