--- a/public/css/style.css
+++ b/public/css/style.css
@@ -306,6 +306,9 @@ a.article:hover {
     h1 {
       font-size: 24px;
     }
+    h4 {
+      font-size: 14px;
+    }
     .inner-header {
         height: 80vh;
         width: 100vw;
@@ -385,4 +388,8 @@ a.article:hover {
 
 .main-color {
     background-color: #101c53;
+}
+
+.main-text-color {
+    color: #101c53;
 }
