--- a/public/css/style.css
+++ b/public/css/style.css
@@ -219,7 +219,7 @@ a.article:hover {
 }
 
 .analyze {
-    height: 70vh;
+    height: 39vh;
 }
 
 .header {
@@ -240,7 +240,7 @@ a.article:hover {
     vertical-align: middle;
   }
   .inner-header {
-    height: 50vh;
+    height: 25vh;
     width: 100vw;
     margin: 0;
     padding: 0;
@@ -255,10 +255,10 @@ a.article:hover {
     position: relative;
     width: 100%;
     height: 100vh;
-    margin-bottom: -7px;
+    margin-top: 60px;
     /*Fix for safari gap*/
-    min-height: 100px;
-    max-height: 150px;
+    min-height: 80px;
+    max-height: 40px;
   }
   .content {
     position: relative;
@@ -310,10 +310,13 @@ a.article:hover {
       font-size: 14px;
     }
     .inner-header {
-        height: 80vh;
+        height: 89.1%;
         width: 100vw;
         margin: 0;
         padding: 0;
+    }
+    .analyze {
+        height: 159vh;
     }
   }  
 
@@ -388,6 +391,10 @@ a.article:hover {
 
 .main-color {
     background-color: #101c53;
+}
+
+.ash-btn-color {
+    background-color: #d4d4d4;
 }
 
 .main-text-color {
