Fix wave background color

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -225,11 +225,7 @@ a.article:hover {
 .header {
     position: relative;
     text-align: center;
-    background: linear-gradient(
-      60deg,
-      rgba(84, 58, 183, 1) 0%,
-      rgba(0, 172, 193, 1) 100%
-    );
+    background: white;
     color: white;
   }
   .logo {
