Fix navbar issue

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -210,8 +210,12 @@ a.article:hover {
     } 
 
     .nav-custom-margin-top {
-        margin-top: 100px;
+        margin-top: 80px;
     } 
+
+    .navbar {
+        padding: 15px 10px 0px 10px;
+    }
 }
     
 .who-we-are {
