--- a/public/css/style.css
+++ b/public/css/style.css
@@ -417,3 +417,19 @@ a.article:hover {
 .progress-height {
     height: 30px; 
 }
+
+#scroll-to-top {
+    display: none;
+    position: fixed;
+    bottom: 20px;
+    right: 30px;
+    z-index: 99;
+    font-size: 18px;
+    border: none;
+    outline: none;
+    background-color: rgba(255, 196, 0, 1);
+    color: white;
+    cursor: pointer;
+    padding: 10px;
+    border-radius: 4px;
+}
