--- a/public/css/style.css
+++ b/public/css/style.css
@@ -377,6 +377,22 @@ a.article:hover {
         top: 100px;
         width: 80%;
     }
+
+    #scroll-to-top {
+        display: none;
+        position: fixed;
+        bottom: 20px;
+        right: 30px;
+        z-index: 99;
+        font-size: 18px;
+        border: none;
+        outline: none;
+        background-color: rgba(255, 196, 0, 1);
+        color: white;
+        cursor: pointer;
+        padding: 10px;
+        border-radius: 4px;
+    }
   } 
 
 .survey-card{
@@ -433,3 +449,21 @@ a.article:hover {
     padding: 10px;
     border-radius: 4px;
 }
+
+@media (max-width: 500px) {
+    #scroll-to-top {
+        display: none;
+        position: fixed;
+        bottom: 10px;
+        right: 10px;
+        z-index: 99;
+        font-size: 18px;
+        border: none;
+        outline: none;
+        background-color: rgba(255, 196, 0, 1);
+        color: white;
+        cursor: pointer;
+        padding: 10px;
+        border-radius: 4px;
+    }
+  } 
