--- a/public/css/style.css
+++ b/public/css/style.css
@@ -477,3 +477,17 @@ a.article:hover {
         margin-left: 400px; 
     }
 }
+
+.custom-header-top {
+    margin-top: 112px;
+}
+
+.news-card-img {
+    height: 300px;
+}
+
+.news-background {
+    min-height:300px;
+    background-size:cover;
+    background-image:url('../img/blur.jpg');
+}
