Add show more and less button in news datatable

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -491,3 +491,11 @@ a.article:hover {
     background-size:cover;
     background-image:url('../img/blur.jpg');
 }
+
+.morecontent span {
+    display: none;
+}
+
+.morelink {
+    display: block;
+}
