--- a/public/css/style.css
+++ b/public/css/style.css
@@ -503,3 +503,14 @@ a.article:hover {
 .news-list-img {
     width: 200px;
 }
+
+.iframe-1 {
+    height: 220px;
+    width: 100%;
+    margin-top: 170px;
+}
+
+.iframe-2 {
+    height: 90px;
+    width: 100%;
+}
