--- a/public/css/style.css
+++ b/public/css/style.css
@@ -579,6 +579,8 @@ input[type="search"]::placeholder {
 
 .success-failure-card-top {
     margin-top: 100px;
+}
+
 .morecontent span {
     display: none;
 }
