--- a/public/css/style.css
+++ b/public/css/style.css
@@ -592,3 +592,9 @@ input[type="search"]::placeholder {
 .news-list-img {
     width: 200px;
 }
+
+.top5-news-img {
+    width:100%;
+    height:100px;
+    object-fit:cover;
+}
