--- a/public/css/style.css
+++ b/public/css/style.css
@@ -498,12 +498,6 @@ input[type="search"]::placeholder {
     margin-top: 112px;
 }
 
-.news-background {
-    min-height:300px;
-    background-size:cover;
-    background-image:url('../img/blur.jpg');
-}
-
 .price-text {
     font-size: 85%;
 }
@@ -609,4 +603,36 @@ input[type="search"]::placeholder {
     width: 100%;
     height: 300px;
     object-fit: cover;
+}
+
+.featured-img {
+    position: relative;
+}
+
+.featured-img-text {
+    position: absolute;
+    bottom: 0px;
+    right: 0px;
+    width: 40%;
+    height: 100%;
+    -webkit-backdrop-filter: blur(3px);
+    backdrop-filter: blur(3px);
+    background-color: rgba(0, 0, 0, 0.5); 
+    color: white;
+}
+
+@media only screen and (max-width: 767px) {
+    .featured-img {
+        position: static;
+    }
+    
+    .featured-img-text {
+        position: static;
+        width: 100%;
+        height: 100%;
+        -webkit-backdrop-filter: blur(3px);
+        backdrop-filter: blur(3px);
+        background-color: rgba(0, 0, 0, 0.5); 
+        color: white;
+    }
 }
