--- a/public/css/style.css
+++ b/public/css/style.css
@@ -652,3 +652,9 @@ input[type="search"]::placeholder {
     font-size: 15px;
     font-weight: 600 !important;
 }
+
+.aside-img {
+    width: 100%;
+    height: 100vh;
+    object-fit: cover;
+}
