--- a/public/css/style.css
+++ b/public/css/style.css
@@ -672,3 +672,7 @@ input[type="search"]::placeholder {
 .pricing-card-border-radius {
     border-radius: 15px !important;
 }
+
+.table-custom-font-size {
+    font-size: 14px;
+}
