Fix table height

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -703,3 +703,7 @@ input[type="search"]::placeholder {
     background-color: #e6e6e6;
     font-size: .8em;
 }
+
+.data-matrix-admin-panel-table {
+    height: 500px;
+}
