--- a/public/css/style.css
+++ b/public/css/style.css
@@ -603,6 +603,14 @@ input[type="search"]::placeholder {
     object-fit: cover;
 }
 
+@media (max-width: 500px) {
+    .top5-news-img {
+        width: 100%;
+        height: 200px;
+        object-fit: cover;
+    }
+}
+
 .category-news-img {
     width: 100%;
     height: 150px;
@@ -707,3 +715,30 @@ input[type="search"]::placeholder {
 .data-matrix-admin-panel-table {
     height: 500px;
 }
+
+/* Owl carousel */
+.owl-prev,
+.owl-next {
+  height: 0px;
+  position: absolute;
+  text-align: center;
+  top: 20%;
+  transform: translateY(-50%);
+  width: 0px;
+}
+
+.owl-next {
+  right: -10px;
+}
+
+.owl-prev {
+  left: -20px;
+} 
+
+.owl-next:focus {
+  outline:none;
+}
+  
+.owl-prev:focus {
+  outline:none;
+} 
