--- a/public/css/style.css
+++ b/public/css/style.css
@@ -742,3 +742,34 @@ input[type="search"]::placeholder {
 .owl-prev:focus {
   outline:none;
 } 
+
+.search-bar-index{
+    -webkit-box-shadow: -2px 3px 54px 2px rgba(0,0,0,1);
+    -moz-box-shadow: -2px 3px 54px 2px rgba(0,0,0,1);
+    box-shadow: -2px 3px 54px 2px rgba(0,0,0,1);
+}
+.sliding-news{
+    background-color: #100b32;
+}
+
+.black-card{
+    background-color: #100b32;
+}
+
+
+.black-card p{
+    color:rgb(236, 233, 233);
+}
+
+.black-card img{
+    -webkit-box-shadow: -2px 3px 14px 2px rgba(0,0,0,1);
+    -moz-box-shadow: -2px 3px 14px 2px rgba(0,0,0,1);
+    box-shadow: -2px 3px 14px 2px rgba(0,0,0,1);
+}
+
+
+.black-card img:hover{
+    -webkit-box-shadow: -2px 3px 34px 2px rgba(0,0,0,1);
+    -moz-box-shadow: -2px 3px 34px 2px rgba(0,0,0,1);
+    box-shadow: -2px 3px 34px 2px rgba(0,0,0,1);
+}
