--- a/public/css/style.css
+++ b/public/css/style.css
@@ -714,12 +714,12 @@ input[type="search"]::placeholder {
 }
 
 .legend{
-    float: right;
-    width: 15%;
-    padding: 5px;
+    float: left;
+    /* width: 15%; */
+    /* padding: 50px; */
     color: #888;
     background-color: #e6e6e6;
-    font-size: .8em;
+    font-size: .7em;
 }
 
 .data-matrix-admin-panel-table {
