--- a/public/css/style.css
+++ b/public/css/style.css
@@ -387,12 +387,12 @@ a.article:hover {
 }
 
 @media (max-width: 768px) {
-    .announcement {
+    /* .announcement {
         position: fixed;
         right: 0;
         top: 100px;
         width: 80%;
-    }
+    } */
 
     #scroll-to-top {
         display: none;
@@ -501,10 +501,10 @@ a.article:hover {
         padding: 0px 0px 0px 0px; 
     }
 
-    .search-custom-margin {
+    /* .search-custom-margin {
         margin-left: -5%;
         width: 176px; 
-    }
+    } */
 }
 
 input[type="search"]::placeholder {  
@@ -805,4 +805,55 @@ if it's not present, don't show loader */
     height: 100%;
     z-index: 9999;
     background: url(/img/spinner.gif) center no-repeat #fff;
+}
+
+@media (max-width: 991px) {
+    .custom-toggler.navbar-toggler {
+        position: relative;
+        border:none !important;
+        left: -5px;
+        right: 0;
+        top: -57px;
+        bottom: 0;
+    }
+
+    .navbar-toggler:focus, .navbar-toggler:active {
+        outline: none;
+        box-shadow: none;
+    }
+
+    .search-custom-margin {
+        margin-top: -7px;
+        width: 100%;
+        height: 0px; 
+    }
+
+    .navbar-brand {
+        position: relative;
+        left: 50px;
+        right: 0;
+        top: -5px;
+        bottom: 0;
+    }
+
+    .announcement {
+        position: fixed;
+        right: 0;
+        top: 148px;
+        width: 80%;
+    }
+
+    .auth-nav-btn {
+        position: relative;
+        left: 85%;
+        right: 0;
+        top: -75px;
+        bottom: 0;
+    }
+}
+
+@media (min-width: 992px) {
+    .auth-nav-btn {
+        display: none;
+    }
 }
