--- a/public/css/style.css
+++ b/public/css/style.css
@@ -883,3 +883,7 @@ if it's not present, don't show loader */
     background-color: #F7F7F7 !important;
     z-index: 1;
 }
+
+.finance-table-font-size {
+    font-size: 14px;
+}
