--- a/public/css/style.css
+++ b/public/css/style.css
@@ -637,7 +637,7 @@ input[type="search"]::placeholder {
 
 .news-index-img {
     width: 100%;
-    height: 150px;
+    height: 300px;
     object-fit: cover;
 }
 
@@ -894,4 +894,8 @@ if it's not present, don't show loader */
 
 .pci-banner {
     width: 10%;
+}
+
+.news-comment-time-text {
+    font-size: 10px;
 }
