--- a/public/css/style.css
+++ b/public/css/style.css
@@ -517,6 +517,10 @@ input[type="search"]::placeholder {
     margin-top: 112px;
 }
 
+.custom-news-header-top {
+    margin-top: 90px;
+}
+
 .price-text {
     font-size: 100%;
     color: black;
@@ -637,7 +641,7 @@ input[type="search"]::placeholder {
 
 .news-index-img {
     width: 100%;
-    height: 400px;
+    height: 450px;
     object-fit: cover;
 }
 
@@ -871,6 +875,8 @@ if it's not present, don't show loader */
 
 .word-break {
     overflow-wrap: break-word;
+    font-size: 14px;
+    line-height: 18px;
 }
 
 .finance-table th:first-child, .finance-table td:first-child {
@@ -898,4 +904,16 @@ if it's not present, don't show loader */
 
 .news-comment-time-text {
     font-size: 10px;
+}
+
+.news-share-buttons {
+    transform: scale(0.75);
+    margin: -55px -25px 30px 0px;
+}
+
+@media only screen and (max-width: 767px) {
+    .news-share-buttons {
+        transform: scale(0.75);
+        margin: -55px -7px 30px 0px;
+    } 
 }
