--- a/public/css/style.css
+++ b/public/css/style.css
@@ -518,7 +518,32 @@ input[type="search"]::placeholder {
 }
 
 .custom-news-header-top {
-    margin-top: 65px;
+    margin-top: 125px;
+}
+
+.custom-news-nav-header-top {
+    margin-top: 105px;
+}
+
+@media (max-width: 767px) {
+    .custom-news-nav-header-top {
+        margin-top: 179px;
+        background-color: rgba(0, 0, 0, 0.8) !important;
+        color: white !important;
+    }
+}
+
+.news-sidenav-active {
+    background-color: rgb(16, 28, 83);
+    color: white !important;
+    border-radius: 0px 25px 25px 0px;
+    width: 85%;
+}
+
+.news-sidenav-active:hover {
+    background-color: rgb(16, 28, 83) !important;
+    color: white !important;
+    border-radius: 0px 25px 25px 0px;
 }
 
 .price-text {
@@ -641,8 +666,9 @@ input[type="search"]::placeholder {
 
 .news-index-img {
     width: 100%;
-    height: 450px;
+    height: 150px;
     object-fit: cover;
+    border-radius: 15px;
 }
 
 .category-news-heading-border {
@@ -908,12 +934,23 @@ if it's not present, don't show loader */
 
 .news-share-buttons {
     transform: scale(0.75);
-    margin: -55px -25px 10px 0px;
+    margin: -55px -32px 10px 0px;
 }
 
 @media only screen and (max-width: 767px) {
     .news-share-buttons {
         transform: scale(0.75);
-        margin: -55px -7px 10px 0px;
+        margin: -55px -15px 10px 0px;
     } 
+}
+
+.single-news-border {
+    border: 1px solid rgb(219, 219, 219);
+    border-radius: 15px;
+    padding: 15px;
+}
+
+.most-recent-border {
+    border: 1px solid rgb(219, 219, 219);
+    border-radius: 15px;
 }
