--- a/public/css/style.css
+++ b/public/css/style.css
@@ -523,7 +523,14 @@ input[type="search"]::placeholder {
 
 .custom-news-nav-header-top {
     margin-top: 105px;
+    overflow: auto;
+    -ms-overflow-style: none; /* IE 11 */
+    scrollbar-width: none; /* Firefox 64 */
 }
+
+.custom-news-nav-header-top::-webkit-scrollbar {
+    display: none;
+  }
 
 @media (max-width: 767px) {
     .custom-news-nav-header-top {
